--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -36,5 +36,5 @@
         </article>
     </template>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body></html>
